# vision-learning-yolo

./: .gitignore  README.md  eval.sh  gen_dataset.py  gen_plates.py  modal_pipeline.py  pipeline_config.py  pipeline_config.yaml  predict_single_image.py  pyproject.toml  train.py  visualize_labels.py
docs/: cloud_deployment.md
